unpackaged/main/default/objects/Exposure_Zip_Code_Qualification__c/Exposure_Zip_Code_Qualification__c.object-meta.xml
<CustomObject>
    <description>Junction object between Exposure and Zip Code Qualification</description>
    <label>Exposure Zip Code Qualification</label>
    <nameField>
        <displayFormat>EZCQ-{0000}</displayFormat>
        <label>Exposure Zip Code Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exposure Zip Code Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>