unpackaged/main/default/objects/Exposure_Zip_Code_Qualification__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exposure</label>
    <referenceTo>srlg_Exposure__c</referenceTo>
    <relationshipLabel>Exposure Zip Code Qualifications</relationshipLabel>
    <relationshipName>Exposure_Zip_Code_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>