unpackaged/main/default/objects/Exposure_Zip_Code_Qualification__c/fields/FX_PWS_Id__c.field-meta.xml
<CustomField>
    <fullName>FX_PWS_Id__c</fullName>
    <description>Formula field - returns the PWS Id value on the related Zip Code Qualification record.</description>
    <formula>Zip_Code_Qualification__r.PWS_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - returns the PWS Id value on the related Zip Code Qualification record.</inlineHelpText>
    <label>FX PWS Id</label>
    <type>Text</type>
</CustomField>