unpackaged/main/default/objects/Exposure_Zip_Code_Qualification__c/fields/FX_PWS_State__c.field-meta.xml
<CustomField>
    <fullName>FX_PWS_State__c</fullName>
    <description>Formula field - returns the PWS State value on the related Zip Code Qualification record.</description>
    <formula>TEXT(Zip_Code_Qualification__r.PWS_State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - returns the PWS State value on the related Zip Code Qualification record.</inlineHelpText>
    <label>FX PWS State</label>
    <type>Text</type>
</CustomField>