unpackaged/main/default/objects/Exposure_Zip_Code_Qualification__c/fields/Zip_Code_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Qualification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code Qualification</label>
    <referenceTo>Zip_Code_Qualification__c</referenceTo>
    <relationshipLabel>Exposure Zip Code Qualifications</relationshipLabel>
    <relationshipName>Exposure_Zip_Code_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>